[package]
name = "netlink-packet-utils"
version = "0.5.2"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2024"
homepage = "https://github.com/butlergroup/netlink-packet-utils"
repository = "https://github.com/butlergroup/netlink-packet-utils"
license = "MIT"
description = "macros and helpers for parsing netlink messages"
readme = "README.md"


[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
pastey = "0.1.1"
thiserror = "2.0.17"
