[package]
name = "netlink-packet-utils"
version = "0.5.2"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"
homepage = "https://github.com/butlergroup/netlink-packet-utils"
repository = "https://github.com/butlergroup/netlink-packet-utils"
license = "MIT"
description = "macros and helpers for parsing netlink messages"
readme = "README.md"


[dependencies]
anyhow = "1.0.31"
byteorder = "1.3.2"
paste = { git = "https://github.com/butlergroup/paste.git" } # forked to resolve RUSTSEC-2024-0436 with the paste crate
thiserror = "1"
